<resources>
    <string name="app_name">Productos Personalizados</string>

    <!-- Change the following strings as required -->
    <string name="title_fragment_login">Ingresar</string>
    <string name="title_fragment_productos">Productos</string>
    <string name="title_fragment_cart">Productos Seleccionados</string>
    <string name="title_fragment_financiamiento">Financiamiento</string>
    <string name="title_fragment_formas_de_pago">Formas de Pago</string>
    <string name="title_proveedor_fragment_principal">Proveedor</string>
    <string name="title_proveedor_fragment_agregar_producto">Nuevo Prenda</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_register_in_short">Registrarse</string>
    <string name="error_invalid_email">La dirección de correo no es válida.</string>
    <string name="error_invalid_password">La nombreMateriaPrima es muy corta</string>
    <string name="error_field_required">Este campo es requerido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>

    <string name="cantidad">Cantidad</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="initial_quantity_value">1</string>
    <string name="total">Total</string>

    <string name="notificacion">Notificaciones</string>

</resources>
