<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivCartImagenProducto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            />

        <TextView
            android:id="@+id/tvNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="Nombre del Producto"
            android:layout_below="@+id/ivCartImagenProducto"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp" />


        <TableLayout
            android:layout_width="fill_parent"
            android:id="@+id/priceLinearLayout"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precio"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:textSize="16sp"
                    android:hint="Precio"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPrecio" />
            </TableRow>

        </TableLayout>
        <LinearLayout
            android:id="@+id/quantityLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/priceLinearLayout"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/quantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDecrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:textSize="18sp"
                    android:text="-" />

                <TextView
                    android:id="@+id/tvCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/initial_quantity_value"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btnIncrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:textSize="22sp"
                    android:text="+" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantityTotal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/quantityLinearLayout"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCostoTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/agregar_producto"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</ScrollView>